--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         max-width: 1012px;
         margin: auto;
       }
+      .footer {
+        border: 3px solid rgba(0, 0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.212);
+      }
     </style>
     <title>Document</title>
   </head>
@@ -292,6 +296,23 @@
             </li>
           </ul>
         </section>
+      </section>
+      <section class="footer">
+        <a href="https://Buterbrod.github.io/rsschool-cv">HTML & CSS</a>
+        -'2021-
+        <a href="https://rs.school/js/"
+          ><img
+            src="pictures/rs_school_js.svg"
+            height="20 px"
+            alt="Rolling Scopes School Logo"
+        /></a>
+        -
+        <a href="https://www.youtube.com/watch?v=hTWKbfoikeg"
+          ><img
+            src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
+            alt="Self Presentation"
+            height="20 px"
+        /></a>
       </section>
     </section>
   </body>
