fix: index.html parsing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,8 +27,8 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="inner">
-      <section class="title">
+    <div class="inner">
+      <div class="title">
         <p>
           > Текст был взят с wiki-страницы:
           <a href="https://ru.wikipedia.org/wiki/Бутерброд">Бутерброд</a>
@@ -36,9 +36,9 @@
           <br />
           > Дата: 04.03.2001
         </p>
-      </section>
-      <section class="main">
-        <section id="Бутерброд">
+      </div>
+      <div class="main">
+        <div id="Бутерброд">
           <h1>Бутерброд</h1>
           <p>
             <strong>Бутербро́д</strong>
@@ -84,9 +84,9 @@
             Бутерброды не подлежат длительному хранению, поэтому их готовят
             непосредственно перед подачей на стол.
           </p>
-        </section>
-        <section id="Ингредиенты">
-          <h2 id="Ингредиенты">Ингредиенты</h2>
+        </div>
+        <div id="Ингредиенты">
+          <h2>Ингредиенты</h2>
           <p>Часто используемые при приготовлении бутербродов ингредиенты:</p>
           <ol>
             <li>
@@ -131,8 +131,8 @@
             <li>зелень - укроп, петрушка, кинза, базилик</li>
             <li>пасты - брынза, сыр и творог</li>
           </ol>
-        </section>
-        <section id="Разновидности бутербродов">
+        </div>
+        <div id="Разновидности_бутербродов">
           <h2>Разновидности бутербродов</h2>
           <table>
             <tr>
@@ -199,8 +199,8 @@
             маленькие бутерброды на поджаренном хлебе - «канапе» (канапэ) и
             «тартинки».
           </p>
-        </section>
-        <section id="Горячие бутерброды">
+        </div>
+        <div id="Горячие_бутерброды">
           <h3>Горячие бутерброды</h3>
           <p>
             См.:
@@ -217,8 +217,8 @@
             Также для украшения бутерброда можно использовать различные травы:
             петрушку, салат, укроп и т. д.
           </p>
-        </section>
-        <section id="Необычные бутерброды">
+        </div>
+        <div id="Необычные_бутерброды">
           <h2>Необычные бутерброды</h2>
           <ul>
             <li>
@@ -249,8 +249,8 @@
               бутерброда на момент продажи составил 10 лет[5].
             </li>
           </ul>
-        </section>
-        <section id="Бутерброд в искусстве">
+        </div>
+        <div id="Бутерброд_в_искусстве">
           <h2>Бутерброд в искусстве</h2>
           <p>
             А. А. Милн написал «Балладу о королевском бутерброде» (известна в
@@ -262,8 +262,8 @@
             Флоренский, Андрей Бильжо, «Синие носы» и другие российские
             художники[7].
           </p>
-        </section>
-        <section id="Юмор">
+        </div>
+        <div id="Юмор">
           <h2>Юмор</h2>
           <ul>
             <li>
@@ -281,8 +281,8 @@
               пропорциональна стоимости ковра».
             </li>
           </ul>
-        </section>
-        <section id="Следствия">
+        </div>
+        <div id="Следствия">
           <h3>Следствия</h3>
           <ul>
             <li>
@@ -295,15 +295,15 @@
               зависнет в воздухе.
             </li>
           </ul>
-        </section>
-      </section>
-      <section class="footer">
+        </div>
+      </div>
+      <div class="footer">
         <a href="https://Buterbrod.github.io/rsschool-cv">HTML & CSS</a>
         -'2021-
         <a href="https://rs.school/js/"
           ><img
             src="pictures/rs_school_js.svg"
-            height="20 px"
+            height="20"
             alt="Rolling Scopes School Logo"
         /></a>
         -
@@ -311,9 +311,9 @@
           ><img
             src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
             alt="Self Presentation"
-            height="20 px"
+            height="20"
         /></a>
-      </section>
-    </section>
+      </div>
+    </div>
   </body>
 </html>
