fix: correct through https://validator.w3.org/nu/#file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="inner">
-      <div class="title">
+      <header class="title">
         <p>
           > Текст был взят с wiki-страницы:
           <a href="https://ru.wikipedia.org/wiki/Бутерброд">Бутерброд</a>
@@ -36,8 +36,8 @@
           <br />
           > Дата: 04.03.2001
         </p>
-      </div>
-      <div class="main">
+      </header>
+      <article class="main">
         <div id="Бутерброд">
           <h1>Бутерброд</h1>
           <p>
@@ -296,10 +296,10 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="footer">
+      </article>
+      <footer class="footer">
         <a href="https://Buterbrod.github.io/rsschool-cv">HTML & CSS</a>
-        -'2021-
+        - <time>2021</time> -
         <a href="https://rs.school/js/"
           ><img
             src="pictures/rs_school_js.svg"
@@ -313,7 +313,7 @@
             alt="Self Presentation"
             height="20"
         /></a>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
